# poc-base-image-manager

./: .gitattributes  .gitignore  .image-manager.yml  README.md  pyproject.toml
.github/workflows/: images.yml
.gitlab/ci/: images.yml
docs/: architecture.md
docs/plans/: 2025-01-02-docker-compose-infrastructure-design.md  2026-01-10-alias-tagging-design.md
images/base/: README.md
images/base/ubuntu/: image.yml
images/dotnet/: README.md
images/dotnet/8.0/: image.yml
images/dotnet/9.0/: image.yml
images/python/: README.md
images/python/3/: image.yml
images/python/3/rootfs/etc/: python-info  version-level-only
images/python/rootfs/etc/: image-level-only  python-info
infrastructure/: garage.toml
manager/: __main__.py  alias_generator.py  building.py  ci_generator.py  cli.py  config.py  configuration.py  dependency_graph.py  locking.py  merger.py  model_old.py  models.py  rendering.py  sbom.py  tag_generator.py  template_resolver.py  testing.py
templates/github/: build-job.yml.j2  manifest-job.yml.j2  test-job.yml.j2  workflow.yml.j2
templates/gitlab/: build-job.yml.j2  manifest-job.yml.j2  pipeline.yml.j2  test-job.yml.j2
tests/: test_alias_generator.py  test_ci_generator.py  test_config.py  test_dependency_graph.py  test_integration.py  test_merger.py  test_model_resolver.py  test_models.py  test_rendering.py  test_tag_generator.py  test_template_resolver.py
tests/fixtures/base/ubuntu/: image.yml
tests/fixtures/python/3/: image.yml
